force-app/main/default/objects/SK_Service_Master__c/SK_Service_Master__c.object-meta.xml
<CustomObject>
    <description>SK Service Master from Order Management</description>
    <label>SK Service Master</label>
    <nameField>
        <label>Serviceid</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SK Service Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>