force-app/main/default/objects/SK_Service_Master__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account with service</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SK Service Master (Account)</relationshipLabel>
    <relationshipName>SK_Service_Master1</relationshipName>
    <type>Lookup</type>
</CustomField>