force-app/main/default/objects/SK_Service_Master__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Branch related to service</description>
    <label>Branch</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SK Service Master</relationshipLabel>
    <relationshipName>SK_Service_Master</relationshipName>
    <type>Lookup</type>
</CustomField>