force-app/main/default/objects/SK_Service_Master__c/fields/CustomerServiceID__c.field-meta.xml
<CustomField>
    <fullName>CustomerServiceID__c</fullName>
    <label>CustomerServiceID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>