force-app/main/default/objects/SK_Service_Master__c/fields/ExpectedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ExpectedQuantity__c</fullName>
    <label>ExpectedQuantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>