force-app/main/default/objects/SK_Service_Master__c/fields/LastScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>LastScheduledDate__c</fullName>
    <label>LastScheduledDate</label>
    <type>Date</type>
</CustomField>