force-app/main/default/objects/SK_Service_Master__c/fields/LastServiceDate__c.field-meta.xml
<CustomField>
    <fullName>LastServiceDate__c</fullName>
    <label>LastServiceDate</label>
    <type>Date</type>
</CustomField>