force-app/main/default/objects/SK_Service_Master__c/fields/LastServiceOrderId__c.field-meta.xml
<CustomField>
    <fullName>LastServiceOrderId__c</fullName>
    <label>LastServiceOrderId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>