force-app/main/default/objects/SK_Service_Master__c/fields/Next_Week_Year__c.field-meta.xml
<CustomField>
    <fullName>Next_Week_Year__c</fullName>
    <formula>NextScheduledWeek__c &amp;&quot;-&quot;&amp; NextScheduledYear__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Week-Year</label>
    <type>Text</type>
</CustomField>