force-app/main/default/objects/SK_Service_Master__c/fields/NextScheduledWeek__c.field-meta.xml
<CustomField>
    <fullName>NextScheduledWeek__c</fullName>
    <label>NextScheduledWeek</label>
    <length>20</length>
    <type>Text</type>
</CustomField>