force-app/main/default/objects/SK_Service_Master__c/fields/NextScheduledYear__c.field-meta.xml
<CustomField>
    <fullName>NextScheduledYear__c</fullName>
    <label>NextScheduledYear</label>
    <length>20</length>
    <type>Text</type>
</CustomField>