force-app/main/default/objects/SK_Service_Master__c/fields/PlacementDate__c.field-meta.xml
<CustomField>
    <fullName>PlacementDate__c</fullName>
    <label>PlacementDate</label>
    <type>Date</type>
</CustomField>