force-app/main/default/objects/SK_Service_Master__c/fields/SalesrepID__c.field-meta.xml
<CustomField>
    <fullName>SalesrepID__c</fullName>
    <label>SalesrepID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>