force-app/main/default/objects/SK_Service_Master__c/fields/Service_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Service_Frequency__c</fullName>
    <label>Service Frequency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>