force-app/main/default/objects/SK_Service_Master__c/fields/Service_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_ID__c</fullName>
    <label>Service ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>