force-app/main/default/objects/SK_Service_Master__c/fields/ServiceCreationDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceCreationDate__c</fullName>
    <label>ServiceCreationDate</label>
    <type>Date</type>
</CustomField>