force-app/main/default/objects/SK_Service_Master__c/fields/ServiceInitiationDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceInitiationDate__c</fullName>
    <label>ServiceInitiationDate</label>
    <type>Date</type>
</CustomField>