force-app/main/default/objects/SK_Service_Master__c/fields/Servicestatus__c.field-meta.xml
<CustomField>
    <fullName>Servicestatus__c</fullName>
    <label>Servicestatus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>