force-app/main/default/objects/SK_Service_Master__c/fields/ZIP_Master__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ZIP Master</label>
    <referenceTo>ZIP_Master__c</referenceTo>
    <relationshipLabel>SK Service Master</relationshipLabel>
    <relationshipName>SK_Service_Master</relationshipName>
    <type>Lookup</type>
</CustomField>